fix(Pdp) : spacing qa fixes

--- a/src/entrypoints/sections/styles/product-information.scss
+++ b/src/entrypoints/sections/styles/product-information.scss
@@ -34,7 +34,7 @@ body.product {
             flex: 0 0 45%;
             max-width: 45%;
             margin: 0;
-            padding: 0 0 var(--space-96);
+            padding: 0 0 var(--space-98);
             min-width: auto;
             width: 100%;
           }
@@ -42,7 +42,7 @@ body.product {
             flex: 0 0 53.889%;
             max-width: 53.889%;
             margin: 0;
-            padding: 0 0 var(--space-96);
+            padding: 0 0 var(--space-98);
             min-width: auto;
             width: 100%;
           }
